--- a/client/common/css/_base.scss
+++ b/client/common/css/_base.scss
@@ -23,6 +23,7 @@ textarea {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    -webkit-app-region: no-drag;
 }
 
 // Links
