--- a/client/common/css/_base.scss
+++ b/client/common/css/_base.scss
@@ -1,7 +1,10 @@
 // Body reset
 @import "variables";
-
+*{
+    box-sizing: border-box;
+}
 html {
+    height: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -11,6 +14,8 @@ body {
     line-height: $line-height-base;
     color: $gray;
     background-color: $gary-lightest;
+    height: 100%;
+    background-color: $white;
 }
 
 html, body, div, p, ul, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, form, input, select, button, textarea, iframe, table, th, td { margin: 0; padding: 0; }
@@ -31,7 +36,7 @@ textarea {
 a {
     color: $link-color;
     text-decoration: none;
-
+    outline: none;
     &:hover,
     &:focus {
         color: $link-hover-color;
@@ -66,4 +71,5 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0 0 15px 0;
+    font-weight: 500;
 }
