--- a/client/common/css/_utilities.scss
+++ b/client/common/css/_utilities.scss
@@ -124,3 +124,11 @@
     padding: 8px!important;
     line-height: 1.42857143!important;
 }
+.table-row{
+    cursor: pointer;
+}
+
+// wrapper
+.wrapper{
+    padding-top: 30px;
+}
