--- a/client/common/css/_utilities.scss
+++ b/client/common/css/_utilities.scss
@@ -139,8 +139,9 @@
     position: relative;
     .right-menu-side{
         position: absolute;
-        left: 0;
         top: 0;
+        left: 4px;
+        right: 16px;
     }
 }
 
