--- a/client/common/css/_variables.scss
+++ b/client/common/css/_variables.scss
@@ -15,6 +15,7 @@ $black:             #000;
 $purple:            #af00ff;
 $red:				#fc4855;
 $blue:              #468edf;
+$main:              #601e39;
 // size
 // ====================
 
