--- a/client/common/css/_variables.scss
+++ b/client/common/css/_variables.scss
@@ -16,6 +16,7 @@ $purple:            #af00ff;
 $red:				#fc4855;
 $blue:              #468edf;
 $main:              #601e39;
+$pink:              #fff5fa;
 // size
 // ====================
 
